--- a/monster/foodie-api/src/main/resources/application.yml
+++ b/monster/foodie-api/src/main/resources/application.yml
@@ -1,6 +1,13 @@
+############################################################
+#
+# web访问端口号  约定：8088
+#
+############################################################
 server:
-  port: 8081
-
+  #  port: 8088
+  tomcat:
+    uri-encoding: UTF-8
+  max-http-header-size: 80KB
 
 ############################################################
 #
@@ -13,9 +20,9 @@ spring:
   datasource:                                           # 数据源的相关配置
     type: com.zaxxer.hikari.HikariDataSource          # 数据源类型：HikariCP
     driver-class-name: com.mysql.jdbc.Driver          # mysql驱动
-    #    url: jdbc:mysql://localhost:3306/angusdb?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+    url: jdbc:mysql://localhost:3306/angusdb?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
     username: root
-    #    password: root
+    password: 123456
     hikari:
       connection-timeout: 30000       # 等待连接池分配连接的最大时长（毫秒），超过这个时长还没可用的连接则发生SQLException， 默认:30秒
       minimum-idle: 5                 # 最小连接数
@@ -36,7 +43,7 @@ spring:
 #
 ############################################################
 mybatis:
-  type-aliases-package: com.imooc.pojo          # 所有POJO类所在包路径
+  type-aliases-package: com.angus.pojo          # 所有POJO类所在包路径
   mapper-locations: classpath:mapper/*.xml      # mapper映射文件
 #  configuration:
 #    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
@@ -48,7 +55,7 @@ mybatis:
 ############################################################
 # 通用 Mapper 配置
 mapper:
-  mappers: com.imooc.my.mapper.MyMapper
+  mappers: com.angus.my.mapper.MyMapper
   not-empty: false    # 在进行数据库操作的的时候，判断表达式 username != null, 是否追加 username != ''
   identity: MYSQL
 # 分页插件配置
