--- a/monster/foodie-service/pom.xml
+++ b/monster/foodie-service/pom.xml
@@ -26,5 +26,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
     </dependencies>
 </project>
