--- a/designModel/pom.xml
+++ b/designModel/pom.xml
@@ -7,6 +7,14 @@
     <groupId>com.gp</groupId>
     <artifactId>design</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.2.2</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
