--- a/bootStartDemo/bootDemo/pom.xml
+++ b/bootStartDemo/bootDemo/pom.xml
@@ -3,32 +3,35 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>foodie-dev</artifactId>
-        <groupId>com.angus</groupId>
+        <artifactId>bootStartDemo</artifactId>
+        <groupId>org.example</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>foodie-api</artifactId>
+    <artifactId>bootDemo</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
-    <!--    其下都是为依赖-->
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.1.9.RELEASE</version>
         </dependency>
-        <!--        子模块之间相互依赖-->
         <dependency>
-            <groupId>com.angus</groupId>
-            <artifactId>foodie-service</artifactId>
+            <groupId>org.example</groupId>
+            <artifactId>format-spring-boot-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.62</version>
+        </dependency>
     </dependencies>
 
 </project>
